@@ -9,18 +9,10 @@
 
 package org.elasticsearch.rest.streams;
 
-import org.elasticsearch.cluster.metadata.DataStream;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
-import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
-import org.elasticsearch.common.settings.ClusterSettings;
-import org.elasticsearch.common.settings.IndexScopedSettings;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.Plugin;
-import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
 import org.elasticsearch.rest.streams.logs.LogsStreamsActivationToggleAction;
 import org.elasticsearch.rest.streams.logs.RestSetLogStreamsEnabledAction;
@@ -29,7 +21,6 @@ import org.elasticsearch.rest.streams.logs.StreamsStatusAction;
 import org.elasticsearch.rest.streams.logs.TransportLogsStreamsToggleActivation;
 import org.elasticsearch.rest.streams.logs.TransportStreamsStatusAction;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -43,20 +34,11 @@ public class StreamsPlugin extends Plugin implements ActionPlugin {
 
     @Override
     public List<RestHandler> getRestHandlers(
-        Settings settings,
-        NamedWriteableRegistry namedWriteableRegistry,
-        RestController restController,
-        ClusterSettings clusterSettings,
-        IndexScopedSettings indexScopedSettings,
-        SettingsFilter settingsFilter,
-        IndexNameExpressionResolver indexNameExpressionResolver,
+        RestHandlersServices restHandlersServices,
         Supplier<DiscoveryNodes> nodesInCluster,
         Predicate<NodeFeature> clusterSupportsFeature
     ) {
-        if (DataStream.LOGS_STREAM_FEATURE_FLAG) {
-            return List.of(new RestSetLogStreamsEnabledAction(), new RestStreamsStatusAction());
-        }
-        return Collections.emptyList();
+        return List.of(new RestSetLogStreamsEnabledAction(), new RestStreamsStatusAction());
     }
 
     @Override
