@@ -7,10 +7,8 @@
 
 package org.elasticsearch.xpack.esql.expression.function.aggregate;
 
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.compute.aggregation.Aggregator;
 import org.elasticsearch.compute.aggregation.AggregatorFunction;
 import org.elasticsearch.compute.aggregation.AggregatorFunctionSupplier;
@@ -21,16 +19,17 @@ import org.elasticsearch.compute.aggregation.GroupingAggregator;
 import org.elasticsearch.compute.aggregation.GroupingAggregatorFunction;
 import org.elasticsearch.compute.aggregation.IntermediateStateDesc;
 import org.elasticsearch.compute.operator.DriverContext;
+import org.elasticsearch.xpack.esql.core.expression.Attribute;
 import org.elasticsearch.xpack.esql.core.expression.AttributeSet;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.expression.Literal;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
-import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 import org.elasticsearch.xpack.esql.planner.ToAggregator;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.IntStream;
 
@@ -38,42 +37,28 @@ import java.util.stream.IntStream;
  * @see ToPartial
  */
 public class FromPartial extends AggregateFunction implements ToAggregator {
-    public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(
-        Expression.class,
-        "FromPartial",
-        FromPartial::new
-    );
+    private static final String NAME = "FromPartial";
+    public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, NAME, FromPartial::new);
 
     private final Expression function;
 
     public FromPartial(Source source, Expression field, Expression function) {
-        this(source, field, Literal.TRUE, function);
+        this(source, field, Literal.TRUE, NO_WINDOW, function);
     }
 
-    public FromPartial(Source source, Expression field, Expression filter, Expression function) {
-        super(source, field, filter, List.of(function));
+    public FromPartial(Source source, Expression field, Expression filter, Expression window, Expression function) {
+        super(source, field, filter, window, List.of(function));
         this.function = function;
     }
 
     private FromPartial(StreamInput in) throws IOException {
-        this(
-            Source.readFrom((PlanStreamInput) in),
-            in.readNamedWriteable(Expression.class),
-            in.getTransportVersion().onOrAfter(TransportVersions.V_8_16_0) ? in.readNamedWriteable(Expression.class) : Literal.TRUE,
-            in.getTransportVersion().onOrAfter(TransportVersions.V_8_16_0)
-                ? in.readNamedWriteableCollectionAsList(Expression.class).get(0)
-                : in.readNamedWriteable(Expression.class)
-        );
-    }
-
-    @Override
-    protected void deprecatedWriteParams(StreamOutput out) throws IOException {
-        out.writeNamedWriteable(function);
+        super(in);
+        this.function = parameters().getFirst();
     }
 
     @Override
     public String getWriteableName() {
-        return ENTRY.name;
+        return NAME;
     }
 
     public Expression function() {
@@ -96,18 +81,23 @@ public class FromPartial extends AggregateFunction implements ToAggregator {
     }
 
     @Override
+    public List<Attribute> aggregateInputReferences(java.util.function.Supplier<List<Attribute>> inputAttributes) {
+        return new ArrayList<>(field().references()); // exclude the function and its argument
+    }
+
+    @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new FromPartial(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2));
+        return new FromPartial(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2), newChildren.get(3));
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, FromPartial::new, field(), filter(), function);
+        return NodeInfo.create(this, FromPartial::new, field(), filter(), window(), function);
     }
 
     @Override
     public FromPartial withFilter(Expression filter) {
-        return new FromPartial(source(), field(), filter, function);
+        return new FromPartial(source(), field(), filter, window(), function);
     }
 
     @Override
