@@ -10,23 +10,31 @@ package org.elasticsearch.xpack.oteldata;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.SetOnce;
+import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.features.NodeFeature;
+import org.elasticsearch.http.HttpTransportSettings;
+import org.elasticsearch.index.IndexingPressure;
 import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.rest.RestHandler;
 import org.elasticsearch.xpack.core.XPackSettings;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPLogsRestAction;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPLogsTransportAction;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPMetricsRestAction;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPMetricsTransportAction;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPTracesRestAction;
+import org.elasticsearch.xpack.oteldata.otlp.OTLPTracesTransportAction;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
 
 public class OTelPlugin extends Plugin implements ActionPlugin {
-    private static final Logger logger = LogManager.getLogger(OTelPlugin.class);
-
-    final SetOnce<OTelIndexTemplateRegistry> registry = new SetOnce<>();
-
-    private final boolean enabled;
 
     // OTEL_DATA_REGISTRY_ENABLED controls enabling the index template registry.
     //
@@ -38,8 +46,43 @@ public class OTelPlugin extends Plugin implements ActionPlugin {
         Setting.Property.Dynamic
     );
 
+    public enum HistogramMappingSettingValues {
+        HISTOGRAM,
+        EXPONENTIAL_HISTOGRAM
+    };
+
+    public static final Setting<HistogramMappingSettingValues> HISTOGRAM_FIELD_TYPE_SETTING = Setting.enumSetting(
+        HistogramMappingSettingValues.class,
+        "xpack.otel_data.histogram_field_type",
+        HistogramMappingSettingValues.EXPONENTIAL_HISTOGRAM,
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
+
+    private static final Logger logger = LogManager.getLogger(OTelPlugin.class);
+
+    private final SetOnce<OTelIndexTemplateRegistry> registry = new SetOnce<>();
+    private final SetOnce<IndexingPressure> indexingPressure = new SetOnce<>();
+    private final boolean enabled;
+    private final long maxProtobufContentLengthBytes;
+
     public OTelPlugin(Settings settings) {
         this.enabled = XPackSettings.OTEL_DATA_ENABLED.get(settings);
+        this.maxProtobufContentLengthBytes = HttpTransportSettings.SETTING_HTTP_MAX_PROTOBUF_CONTENT_LENGTH.get(settings).getBytes();
+    }
+
+    @Override
+    public Collection<RestHandler> getRestHandlers(
+        RestHandlersServices restHandlersServices,
+        Supplier<DiscoveryNodes> nodesInCluster,
+        Predicate<NodeFeature> clusterSupportsFeature
+    ) {
+        assert indexingPressure.get() != null : "indexing pressure must be set";
+        List<RestHandler> handlers = new ArrayList<>(3);
+        handlers.add(new OTLPMetricsRestAction(indexingPressure.get(), maxProtobufContentLengthBytes));
+        handlers.add(new OTLPTracesRestAction(indexingPressure.get(), maxProtobufContentLengthBytes));
+        handlers.add(new OTLPLogsRestAction(indexingPressure.get(), maxProtobufContentLengthBytes));
+        return handlers;
     }
 
     @Override
@@ -47,6 +90,7 @@ public class OTelPlugin extends Plugin implements ActionPlugin {
         logger.info("OTel ingest plugin is {}", enabled ? "enabled" : "disabled");
         Settings settings = services.environment().settings();
         ClusterService clusterService = services.clusterService();
+        indexingPressure.set(services.indexingPressure());
         registry.set(
             new OTelIndexTemplateRegistry(settings, clusterService, services.threadPool(), services.client(), services.xContentRegistry())
         );
@@ -55,7 +99,7 @@ public class OTelPlugin extends Plugin implements ActionPlugin {
             registryInstance.setEnabled(OTEL_DATA_REGISTRY_ENABLED.get(settings));
             registryInstance.initialize();
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
@@ -65,6 +109,15 @@ public class OTelPlugin extends Plugin implements ActionPlugin {
 
     @Override
     public List<Setting<?>> getSettings() {
-        return List.of(OTEL_DATA_REGISTRY_ENABLED);
+        return List.of(OTEL_DATA_REGISTRY_ENABLED, HISTOGRAM_FIELD_TYPE_SETTING);
+    }
+
+    @Override
+    public Collection<ActionHandler> getActions() {
+        List<ActionHandler> handlers = new ArrayList<>(3);
+        handlers.add(new ActionHandler(OTLPMetricsTransportAction.TYPE, OTLPMetricsTransportAction.class));
+        handlers.add(new ActionHandler(OTLPTracesTransportAction.TYPE, OTLPTracesTransportAction.class));
+        handlers.add(new ActionHandler(OTLPLogsTransportAction.TYPE, OTLPLogsTransportAction.class));
+        return handlers;
     }
 }
